<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="1"
          app:showAsAction="never"/>
    <item android:id="@+id/action_addagent"
          android:title="@string/addagent"
          android:orderInCategory="0"
          app:showAsAction="never"/>
    <item android:id="@+id/action_record"
          android:title="@string/record"
          android:orderInCategory="2"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/about"
          android:orderInCategory="9"
          app:showAsAction="never"/>
</menu>
