<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="bottom">

    <GridLayout
        android:id="@+id/layout_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_column="0"
            android:text="1"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_2"
            android:text="2"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_3"
            android:text="3"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_4"
            android:text="4"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_5"
            android:text="5"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_6"
            android:text="6"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_7"
            android:text="7"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_8"
            android:text="8"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_9"
            android:text="9"
            android:onClick="onClick"/>

    </GridLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_chmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chmode"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_talk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk"
            android:onClick="onClick"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:onClick="onClick"/>
    </LinearLayout>
</LinearLayout>